--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "18.2.7",
     "graphql": "^16.7.1",
     "lodash": "^4.17.21",
-    "next": "13.4.12",
+    "next": "^14.2.3",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
